--- a/css/style.less
+++ b/css/style.less
@@ -845,7 +845,7 @@ ul {
       border: 4px solid rgba(255, 255, 255, 0.5);
       border-radius: 5px;
       padding: 4px 8px;
-
+      display: block;
       &:focus {
         outline: none;
       }
@@ -1264,6 +1264,13 @@ ul {
     &-link-list {
       margin: 0 5px;
       padding: 0;
+    }
+  }
+  .popup {
+    &-login {
+      input {
+        width: 100px;
+      }
     }
   }
 }
