--- a/css/style.less
+++ b/css/style.less
@@ -294,6 +294,7 @@ ul {
       margin: 10px auto;
       border: none;
       transition: 0.2s;
+      cursor: pointer;
 
       &-1 {
         color: #008aff;
@@ -349,7 +350,7 @@ ul {
 //product
 .product {
   display: flex;
-  margin-top: 50px;
+  margin-top: 150px;
   position: relative;
   max-width: 500px;
 
@@ -1012,7 +1013,6 @@ input[type="range"] {
       margin-right: 0;
       &-item {
         padding: 10px;
-        
       }
     }
   }
